# whiskers-launcher-core

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/features/: mod.rs
src/features/core/apps/: mod.rs
src/features/core/extensions/: mod.rs
src/features/core/settings/: mod.rs
src/features/extensions/: mod.rs
src/paths/: mod.rs
src/results/: mod.rs
src/utils/: mod.rs
