[package]
name = "whiskers-launcher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
dirs = "5.0.1"
notify-rust = "4.11.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
tux-icons = { path = "/home/lighttigerxiv/Projects/whiskers-apps/tux-icons"}

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5.0"
#tux-icons = "0.2.2"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5.1"
powershell_script = "1.1.0"

[features]
core-api = []
extensions-api = []
all = ["core-api", "extensions-api"]
