[package]
name = "whiskers-launcher-core"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A create containing the essential code for Whiskers Launcher and it's extensions"
repository = "https://github.com/Whiskers-Apps/whiskers-launcher-core"

[dependencies]
bincode = "1.3.3"
dirs = "5.0.1"
notify-rust = "4.11.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
tux-icons = "0.3.0"
freedesktop-desktop-entry = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1.8"
powershell_script = "1.1.0"